test/invalid/MethodsMustReturnSomething/MethodsMustReturnSomething.plume
/**
 * @author Robin Burgess 36815
 */
 class MethodsMustReturnSomething extends Object is
	field i : Integer
	method standAround : () -> is
	